--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="cell if-m--cta">
                 <div class="grid-container">
-                    <div class="grid-x grid-padding-x grid-padding-y align-middle align-justify">
+                    <div class="grid-x grid-padding-x grid-padding-y">
                         <div class="medium-6 cell">6 cells</div>
                         <div class="medium-6 cell text-right">6 cells</div>
                     </div>
