--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="HandheldFriendly" content="True">
 
-        <title>InterFlare</title>
+        <title>InterFlare / No-nonsense Creative Minecraft Server</title>
         
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/site.css">
-
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -18,13 +17,28 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-W6G4DT8');</script>
 
+        <meta name="description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="canonical" href="https://interflare.net/">
+        <meta name="referrer" content="no-referrer-when-downgrade">
+
+        <meta property="og:site_name" content="InterFlare / No-nonsense Minecraft Server">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="InterFlare / No-nonsense Minecraft Server">
+        <meta property="og:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
+        <meta property="og:url" content="https://interflare.net/">
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="InterFlare / No-nonsense Minecraft Server">
+        <meta name="twitter:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
+        <meta name="twitter:url" content="https://interflare.net/">
+
         <script src="https://use.typekit.net/qsn5cop.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
     </head>
     <body>
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W6G4DT8"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-        
+
         <div class="grid-y grid-frame">
             <div class="cell auto if-m--main">
                 <div class="cell">
