Minor link and spelling corrections

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                             </div>
                             <div class="medium-6 cell">
                                 <ul class="menu">
-                                    <li><a href="https://maps.interflare.xyz/?utm_source=if.web.home">Live maps</a></li>
-                                    <li class="cta"><a href="#">Join us</a></li>
+                                    <li><a href="https://map.interflare.xyz/?utm_source=if.web.home">Live maps</a></li>
+                                    <li class="cta"><a href="join.html">Join us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -68,7 +68,7 @@
 
                             <p class="blurb">
                                 We are a small creative server that cuts the bullshit, and just
-                                let you build. No need to worry about when the admin is going
+                                lets you build. No need to worry about when the admin is going
                                 to go on a power trip or if the moderator is going to ban you
                                 for the block of grass you broke.
                             </p>
@@ -78,7 +78,7 @@
                                 everything in-between.
                             </p>
 
-                            <p><a class="cta" href="#">
+                            <p><a class="cta" href="join.html">
                                 Join us today!
                             </a></p>
                         </div>
