Fix the site name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="canonical" href="https://interflare.net/">
         <meta name="referrer" content="no-referrer-when-downgrade">
 
-        <meta property="og:site_name" content="InterFlare / No-nonsense Minecraft Server">
+        <meta property="og:site_name" content="InterFlare">
         <meta property="og:type" content="website">
         <meta property="og:title" content="InterFlare / No-nonsense Minecraft Server">
         <meta property="og:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
