Fix alignment issue

--- a/join.html
+++ b/join.html
@@ -58,7 +58,7 @@
             </div>
             <div class="if-m--content-cnt">
                 <div class="grid-container">
-                    <div class="grid-x grid-padding-x grid-padding-y if-m--content">
+                    <div class="grid-x grid-padding-x grid-padding-y if-m--content" data-equalizer data-equalize-on="medium">
                         <div class="small-12 cell small-padding-collapse if-m--crumbs">
                             <nav aria-label="You are here:" role="navigation">
                                 <ul class="breadcrumbs">
@@ -87,22 +87,21 @@
                                 excplicity using the following instructions:
                             </p>
                         </div>
-
                         <div class="medium-4 cell">
                             <h4>Step 1</h4>
-                            <p>Click on the hamburger icon in the launcher, and select
+                            <p data-equalizer-watch>Click on the hamburger icon in the launcher, and select
                                 "launch options" and then "add new".</p>
                             <img src="assets/img/mc-version-steps/1.png">
                         </div>
                         <div class="medium-4 cell">
                             <h4>Step 2</h4>
-                            <p>Under "Version", select the current version of the server,
+                            <p data-equalizer-watch>Under "Version", select the current version of the server,
                                 which is release 1.12.1. Click save.</p>
                             <img src="assets/img/mc-version-steps/2.png">
                         </div>
                         <div class="medium-4 cell">
                             <h4>Step 3</h4>
-                            <p>When you return back to the home screen, click the arrow
+                            <p data-equalizer-watch>When you return back to the home screen, click the arrow
                                 next to "play" and select the profile you just created.</p>
                             <img src="assets/img/mc-version-steps/3.png">
                         </div>
