--- a/join.html
+++ b/join.html
@@ -80,11 +80,12 @@
                         <div class="small-12 cell">
                             <h3>Setting your Minecraft version</h3>
                             <p>
-                                Because of Micro$oft's strange development cycle, often
-                                you will find that there is a new version of Minecraft
-                                almost every day. This means that the server won't always
-                                be up-to-date. To remedy this, you can set your version
-                                excplicity using the following instructions:
+                                Because of Microsoft's development cycle, often
+                                you will find that there is a new version of
+                                Minecraft very regularly, which prevents the
+                                server from being always up-to-date. To remedy
+                                this, you can set your version excplicity using
+                                the following instructions:
                             </p>
                         </div>
                         <div class="medium-4 cell">
@@ -104,10 +105,6 @@
                             <p data-equalizer-watch>When you return back to the home screen, click the arrow
                                 next to "play" and select the profile you just created.</p>
                             <img src="assets/img/mc-version-steps/3.png">
-                        </div>
-                        <div class="small-12 cell text-center">
-                            <br>
-                            <h4>You can now join the server!</h4>
                         </div>
                     </div>
                 </div>
