--- a/join.html
+++ b/join.html
@@ -49,7 +49,7 @@
                         </div>
                         <div class="medium-6 cell">
                             <ul class="menu">
-                                <li><a href="https://map.interflare.xyz/?utm_source=if.web.home">Live maps</a></li>
+                                <li><a href="http://interflare.net/map.html">Live maps</a></li>
                                 <li class="cta"><a href="join.html">Join us</a></li>
                             </ul>
                         </div>
