--- a/join.html
+++ b/join.html
@@ -19,18 +19,18 @@
 
         <meta name="description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="canonical" href="https://interflare.net/">
+        <link rel="canonical" href="https://interflare.net/join.html">
         <meta name="referrer" content="no-referrer-when-downgrade">
 
         <meta property="og:site_name" content="InterFlare">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Join / InterFlare">
         <meta property="og:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
-        <meta property="og:url" content="https://interflare.net/">
+        <meta property="og:url" content="https://interflare.net/join.html">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Join / InterFlare">
         <meta name="twitter:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
-        <meta name="twitter:url" content="https://interflare.net/">
+        <meta name="twitter:url" content="https://interflare.net/join.html">
 
         <script src="https://use.typekit.net/qsn5cop.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
