--- a/join.html
+++ b/join.html
@@ -73,7 +73,7 @@
                         <div class="small-12 cell">
                             <div class="input-group">
                                 <span class="input-group-label">MC v1.12.1</span>
-                                <input class="input-group-field if-m--big-input" type="text" value="mc.interflare.net" onfocus="this.select();">
+                                <input class="input-group-field if-m--big-input" type="text" value="c.interflare.net" onfocus="this.select();">
                             </div>
                         </div>
 
