--- a/map.html
+++ b/map.html
@@ -8,14 +8,14 @@
 
         <title>Minecraft Live Map / InterFlare</title>
         
-        <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/site.css"-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous">
+        <link rel="stylesheet" href="assets/css/site.css">
 
-        <!--script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-W6G4DT8');</script-->
+        })(window,document,'script','dataLayer','GTM-W6G4DT8');</script>
 
         <meta name="description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -32,10 +32,10 @@
         <meta name="twitter:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
         <meta name="twitter:url" content="http://interflare.net/map.html">
 
-        <!--script src="https://use.typekit.net/qsn5cop.js"></script>
-        <script>try{Typekit.load({ async: true });}catch(e){}</script-->
+        <script src="https://use.typekit.net/qsn5cop.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-        <!--style type="text/css">
+        <style type="text/css">
             #if-a--livemap-box {
                 border: none;
 
@@ -43,16 +43,21 @@
                 width: 100%;
                 height: 100%;
             }
-        </style-->
+        </style>
     </head>
     <body>
-        <!--noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W6G4DT8"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript-->
-
-        <a href="http://map.interflare.net:2095/">Please click here if you weren't redirected.</a>
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W6G4DT8"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         
+        <iframe id="if-a--livemap-box"></iframe>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/5.0.1/what-input.min.js" integrity="sha256-H/pzN880hDBJqAzZip+BOpvX0ofDzjiB1HXUf/0tbcE=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js" integrity="sha256-mRYlCu5EG+ouD07WxLF8v4ZAZYCA6WrmdIXyn1Bv9Vk=" crossorigin="anonymous"></script>
         <script>
-            window.location.replace("http://map.interflare.net:2095/" + window.location.search);
+            $(document).foundation();
+
+            $("#if-a--livemap-box").attr("src", "http://map.interflare.net:2095/" + window.location.search)
         </script>
     </body>
 </html>
