--- a/map.html
+++ b/map.html
@@ -34,23 +34,35 @@
 
         <script src="https://use.typekit.net/qsn5cop.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
-
-        <style type="text/css">
-            #if-a--livemap-box {
-                border: none;
-
-                position: absolute;
-                width: 100%;
-                height: 100%;
-            }
-        </style>
     </head>
     <body>
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W6G4DT8"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         
-        <iframe id="if-a--livemap-box"></iframe>
-
+        <div class="if-m--main" style="min-height:100%;">
+            <div class="grid-y grid-frame">
+                <div class="cell shrink">
+                    <div class="grid-container if-m--header" style="padding: .5rem 1.5rem;">
+                        <div class="grid-x grid-padding-x grid-padding-y align-justify">
+                            <div class="small-6 cell">
+                                <a href="/">
+                                    <svg class="if-m--banner" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1259.73 222.2"><defs><style>.\32 54dcb33-3b52-44a0-a192-1da12b37af2c{fill:#fff;}</style></defs><title>banner</title><g id="e6de4f73-5dba-43ff-9050-c2dc9b067cf7" data-name="Layer 2"><g id="c7e7241a-688b-4e51-999d-8d2857e66add" data-name="Board 6"><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M40,125.74c0,14.95,12.93,20.2,20.2,20.2s20.2-6.06,20.2-20.2V54.64c0-16.16,14.95-20.2,20.6-20.2,5.25,0,19.8,4.44,19.8,20.2v71.1c0,15.35,12.93,20.2,20.2,20.2,6.87,0,19.8-5.25,19.8-20.2v-101c0-15.35,15.21-20.2,20.6-20.2,4.85,0,20.6,3.64,20.6,20.2v101a101,101,0,1,1-202,0V84.13c0-15.76,14.14-20.2,19.8-20.2,4.44,0,20.2,3.23,20.2,20.2" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M19.8,54.64c6.06,0,20.2-4.44,20.2-20.2V24.34C40,7.78,24.24,4.54,19.8,4.54,14.95,4.54,0,8.18,0,24.34v10.1c0,19.39,19.8,20.2,19.8,20.2" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M285.69,194.12V35.88h20V194.12Z" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M442.78,107.41v86.71H423.46V110.17c0-18.63-7.59-24.61-20-24.61-14.26,0-23.92,9-32.2,22.31v86.25H351.93v-121h16.56l1.61,18.17c9-12.42,21.62-20.93,37.95-20.93C430.13,70.38,442.78,84.41,442.78,107.41Z" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M519.37,196.88c-20,0-32-11.73-32-33.81v-75H466.47v-15H487.4V45.31l19.32-2.07v29.9h29.21l-2.07,15H506.72v74.06c0,12.65,4.37,18.63,15.18,18.63,5.75,0,10.81-1.61,16.79-5.29L546,188.83A46.24,46.24,0,0,1,519.37,196.88Z" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M655.52,140.3h-78C579.63,169.51,593,181,611.37,181c12.19,0,21.16-3.45,31.74-10.81l8.51,11.5c-11.73,9.43-25.07,15.18-41.63,15.18-33.35,0-52.9-23.69-52.9-62.1,0-37.95,18.86-64.4,49.68-64.4,32.43,0,49.22,22.77,49.22,59.34C656,133.86,655.75,137.77,655.52,140.3Zm-18.63-16.1c0-24.38-9.66-38.41-29.67-38.41-16.79,0-28.06,12-29.67,40.25h59.34Z" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M754.88,71.76l-3.45,18.86a38,38,0,0,0-10.58-1.38c-15.41,0-24.15,10.81-29.67,34v70.84H691.87v-121h16.56l1.84,25.3C716.7,79.81,728,70.38,742.92,70.38A48.78,48.78,0,0,1,754.88,71.76Z" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M800.88,52v55.66h52.44v15.87H800.88v70.61H781.1V35.88h82.8L861.6,52Z" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M918.64,180.78a20.63,20.63,0,0,0,7.82-1.38L931.52,193a39.3,39.3,0,0,1-17,3.91c-14.72,0-23.23-8.74-23.23-26V24.38l19.32-2.3V170.66C910.59,177.33,912.66,180.78,918.64,180.78Z" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M1049.51,183.31l-4.6,13.57c-11.73-1.61-19.32-6.44-22.54-18.63-8.51,12.88-21.39,18.63-36.34,18.63-23.92,0-38.18-15-38.18-36.57,0-25.76,19.32-39.79,52.44-39.79h19.78v-9.43c0-17.94-8.51-24.84-26-24.84-9.2,0-20.24,2.3-32.66,6.67l-4.83-14.26c14.49-5.52,27.6-8.28,40.94-8.28,28.75,0,41.86,14.72,41.86,39.79v56.12C1039.39,177.56,1043.07,181,1049.51,183.31Zm-29.44-20.93V133.63h-17.25c-22.54,0-34.5,8.51-34.5,25.76,0,14.72,7.59,22.77,22.08,22.77C1003.51,182.16,1013.17,175.49,1020.07,162.38Z" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M1147,71.76l-3.45,18.86A38,38,0,0,0,1133,89.24c-15.41,0-24.15,10.81-29.67,34v70.84H1084v-121h16.56l1.84,25.3c6.44-18.63,17.71-28.06,32.66-28.06A48.78,48.78,0,0,1,1147,71.76Z" transform="translate(0 -4.54)"/><path class="254dcb33-3b52-44a0-a192-1da12b37af2c" d="M1259.27,140.3h-78c2.07,29.21,15.41,40.71,33.81,40.71,12.19,0,21.16-3.45,31.74-10.81l8.51,11.5c-11.73,9.43-25.07,15.18-41.63,15.18-33.35,0-52.9-23.69-52.9-62.1,0-37.95,18.86-64.4,49.68-64.4,32.43,0,49.22,22.77,49.22,59.34C1259.73,133.86,1259.5,137.77,1259.27,140.3Zm-18.63-16.1c0-24.38-9.66-38.41-29.67-38.41-16.79,0-28.06,12-29.67,40.25h59.34Z" transform="translate(0 -4.54)"/></g></g></svg>
+                                </a>
+                            </div>
+                            <div class="small-6 cell">
+                                <ul class="menu" style="-webkit-box-pack: end; -webkit-justify-content: flex-end; -ms-flex-pack: end; justify-content: flex-end;">
+                                    <li class="cta"><a href="join.html">Join us</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cell auto if-m--livemap">
+                    <iframe id="if-a--livemap-box"></iframe>
+                </div>
+            </div>
+        </div>
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/5.0.1/what-input.min.js" integrity="sha256-H/pzN880hDBJqAzZip+BOpvX0ofDzjiB1HXUf/0tbcE=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js" integrity="sha256-mRYlCu5EG+ouD07WxLF8v4ZAZYCA6WrmdIXyn1Bv9Vk=" crossorigin="anonymous"></script>
