--- a/map.html
+++ b/map.html
@@ -19,18 +19,18 @@
 
         <meta name="description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="canonical" href="http://interflare.net/map.html">
+        <link rel="canonical" href="https://interflare.net/map.html">
         <meta name="referrer" content="no-referrer-when-downgrade">
 
         <meta property="og:site_name" content="InterFlare">
         <meta property="og:type" content="website">
         <meta property="og:title" content="InterFlare / No-nonsense Minecraft Server">
         <meta property="og:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
-        <meta property="og:url" content="http://interflare.net/map.html">
+        <meta property="og:url" content="https://interflare.net/map.html">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="InterFlare / No-nonsense Minecraft Server">
         <meta name="twitter:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
-        <meta name="twitter:url" content="http://interflare.net/map.html">
+        <meta name="twitter:url" content="https://interflare.net/map.html">
 
         <script src="https://use.typekit.net/qsn5cop.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -69,7 +69,7 @@
         <script>
             $(document).foundation();
 
-            $("#if-a--livemap-box").attr("src", "http://map.interflare.net:2095/" + window.location.search)
+            $("#if-a--livemap-box").attr("src", "https://map.interflare.net/" + window.location.search)
         </script>
     </body>
 </html>
