--- a/join.html
+++ b/join.html
@@ -49,6 +49,7 @@
                         </div>
                         <div class="medium-6 cell">
                             <ul class="menu">
+                                <li><a href="https://community.interflare.net/?utm_source=iflr-static">Community</a></li>
                                 <li><a href="map.html">Live maps</a></li>
                                 <li class="cta"><a href="join.html">Join us</a></li>
                             </ul>
