big surprise, i changed the map url again! :D

--- a/map.html
+++ b/map.html
@@ -71,8 +71,8 @@
         <script>
             $(document).foundation();
 
-            $('#if-a--livemap-box').attr('src', `https://map.interflare.net/${window.location.search}`)
-            $('#if-a--livemap-noframe').attr('href', `https://map.interflare.net/${window.location.search}`)
+            $('#if-a--livemap-box').attr('src', `https://c-map.interflare.net/${window.location.search}`)
+            $('#if-a--livemap-noframe').attr('href', `https://c-map.interflare.net/${window.location.search}`)
         </script>
     </body>
 </html>
