download button on right side of banner
also automatic height of banner

--- a/projects/maplink.html
+++ b/projects/maplink.html
@@ -72,9 +72,19 @@
                         </div>
                         <div class="if-m--banner has-cta" style="background-image: url(../assets/img/projects/maplink-banner.png);">
                             <div class="if-m--banner-overlay">
-                                <h1>MapLink</h1>
-                                <h3>Drive players to your livemap</h3>
-                                <p class="cta"><a href="" class="button secondary">Download now &raquo;</a></p>
+                                <div class="grid-x grid-margin-x" style="min-height:100%;">
+                                    <div class="medium-10 medium-offset-1 cell if-m--banner-content">
+                                        <div class="grid-x grid-margin-x">
+                                            <div class="medium-8 cell">
+                                                <h1>MapLink</h1>
+                                                <h3>Drive players to your livemap</h3>
+                                            </div>
+                                            <div class="medium-4 cell cta">
+                                                <p class="cta"><a href="" class="button secondary">Download now &raquo;</a></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
