use a better banner overlay pixel

--- a/projects/maplink.html
+++ b/projects/maplink.html
@@ -70,7 +70,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="if-m--banner has-cta" style="background-image: url(../assets/img/projects/maplink-banner.png);">
+                        <div class="if-m--banner has-cta" style="background-image: url('../assets/img/projects/maplink-banner.png');">
                             <div class="if-m--banner-overlay">
                                 <div class="grid-x grid-margin-x" style="min-height:100%;">
                                     <div class="medium-10 medium-offset-1 cell if-m--banner-content">
