--- a/map.html
+++ b/map.html
@@ -9,7 +9,7 @@
         <title>Minecraft Live Map / InterFlare</title>
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/site.css">
+        <link rel="stylesheet" href="assets/css/site.1.css">
 
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
