jumbo header image

--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@
                         </ul>
                     </div>
                 </nav>
+                <jumbo style="background: url('assets/img/jumbo-header-01.jpg') center no-repeat;">
+                    <div class="overlay">
+                        <div class="container">
+                            <div class="grid-x grid-margin-x align-middle">
+                                <div class="medium-10 medium-offset-1 cell">
+                                    <div class="grid-x grid-margin-x align-middle">
+                                        <div class="medium-8 cell">
+                                            <h1>InterFlare Minecraft</h1>
+                                            <h3>The home of your next big project.</h3>
+                                        </div>
+                                        <div class="medium-4 cell">
+                                            <p class="cta"><a href="join.html">Join us today!</a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </jumbo>
             </main>
         </div>
 
