--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
                         </div>
                     </div>
                 </jumbo>
+
+                <footer>
+                    <div class="container">
+                        <img class="logo" src="assets/img/endogix-logo.png">
+                        <div class="brand">
+                            <p>&copy; Endogix&trade; 2018</p>
+                            <p>Hello from Auckland</p>
+                        </div>
+                    </div>
+                </footer>
             </main>
         </div>
 
