--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                             <h3>The home of your next big project.</h3>
                                         </div>
                                         <div class="medium-4 cell">
-                                            <p class="cta"><a href="join.html">Join us today!</a></p>
+                                            <p class="cta"><a href="join.html">Join us today</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -102,6 +102,68 @@
                         </div>
                     </div>
                 </jumbo>
+
+                <section id="reasons">
+                    <div class="container">
+                        <h2 class="text-center">Exactly what you need from a server</h2>
+
+                        <div class="grid-x grid-margin-x">
+                            <div class="medium-4 cell padded">
+                                <h4>Custom private worlds</h4>
+                                <p>
+                                    As an alternative to hosting your
+                                    own server for a large project, you
+                                    can rent a private world for you
+                                    and your builders.
+                                </p>
+                            </div>
+                            <div class="medium-4 cell padded">
+                                <h4>WorldEdit available</h4>
+                                <p>
+                                    Players that have been online for a
+                                    certain amount of time are granted
+                                    access to a limited version of
+                                    WorldEdit.
+                                </p>
+                            </div>
+                            <div class="medium-4 cell padded">
+                                <h4>Web world maps</h4>
+                                <p>
+                                    An online map can be extremely useful
+                                    when working on projects with a large
+                                    footprint, which is why we provide an
+                                    easy-to-use web map to assist you.
+                                </p>
+                            </div>
+                            <div class="medium-4 cell padded">
+                                <h4>Hardened protection</h4>
+                                <p>
+                                    To prevent griefing in the public
+                                    worlds, we log everything through
+                                    CoreProtect, and offer self-service
+                                    and managed WorldGuard.
+                                </p>
+                            </div>
+                            <div class="medium-4 cell padded">
+                                <h4>Lightning fast connection</h4>
+                                <p>
+                                    We use top of the line cloud services
+                                    with a redundant 40gbps network to
+                                    ensure that our servers are fast and
+                                    responsive.
+                                </p>
+                            </div>
+                            <div class="medium-4 cell padded">
+                                <h4>Infallible uptime</h4>
+                                <p>
+                                    Our continous upgrade system allows
+                                    our servers to always be online and
+                                    available, whenever you want to play.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
                 <footer>
                     <div class="container">
