--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                             <h3>The home of your next big project.</h3>
                                         </div>
                                         <div class="medium-4 cell">
-                                            <p class="cta"><a href="join.html">Join us today</a></p>
+                                            <p class="cta"><a href="#join">Join us today</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -162,6 +162,18 @@
                                 </p>
                             </div>
                         </div>
+                    </div>
+                </section>
+
+                <section class="dark" id="join">
+                    <div class="container">
+                        <h3>Join us today</h3>
+                        <div class="input-group">
+                            <span class="input-group-label">MC v1.12.1</span>
+                            <input class="input-group-field" type="text" value="c.interflare.net" onfocus="this.select();">
+                        </div>
+                        
+                        <p><a href="join.html">Need help setting your game version?</a></p>
                     </div>
                 </section>
 
