--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                             <h3>The home of your next big project.</h3>
                                         </div>
                                         <div class="medium-4 cell">
-                                            <p class="cta"><a href="#join">Join us today</a></p>
+                                            <p class="cta"><a href="#join" data-smooth-scroll>Join us today</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -107,8 +107,9 @@
                     <div class="container">
                         <h2 class="text-center">Exactly what you need from a server</h2>
 
-                        <div class="grid-x grid-margin-x">
-                            <div class="medium-4 cell padded">
+                        <div class="grid-x grid-margin-x" data-equalizer>
+                            <div class="medium-4 cell padded" data-equalizer-watch>
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 96 96"><defs><style>.a{fill:url(#a);}</style><linearGradient id="a" x1="48" y1="96.74" x2="48" y2="-0.53" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f15a26"/><stop offset="1" stop-color="#f79420"/></linearGradient></defs><title>planet</title><path class="a" d="M48,0A48,48,0,1,0,96,48,48.06,48.06,0,0,0,48,0ZM88.94,48a40.82,40.82,0,0,1-8.48,24.91,6.54,6.54,0,0,1-1.59-7.62c1.51-3.31,1.9-10.94,1.56-13.91s-1.88-10.14-6.07-10.2-7.07-1.45-9.56-6.42c-5.16-10.34,9.7-12.32,4.53-18-1.44-1.61-8.91,6.62-10-4.35-.07-.77.68-1.94,1.68-3.16A41,41,0,0,1,88.94,48ZM42.38,7.47c-1,1.91-3.57,2.68-5.14,4.11-3.42,3.1-4.89,2.67-6.73,5.64s-7.83,7.25-7.83,9.39,3,4.69,4.53,4.19a16.12,16.12,0,0,1,7.83.36c2.35.82,19.57,1.65,14.08,16.22C47.39,52,39.76,51.22,37.73,58.9a60.33,60.33,0,0,0-1.43,7.5C36.17,68.83,38,78,35.67,78S27,69.79,27,68.31s-1.65-6.69-1.65-11.15-7.58-4.39-7.58-10.31c0-5.35,4.11-8,3.19-10.57s-8.14-2.64-11.15-3A41,41,0,0,1,42.38,7.47ZM35.12,86.85c2.46-1.3,2.71-3,4.94-3.07,2.55-.11,4.63-1,7.5-1.62,2.55-.56,7.12-3.15,11.14-3.48,3.38-.28,10.07.18,11.87,3.45a40.78,40.78,0,0,1-35.45,4.72Z"/></svg>
                                 <h4>Custom private worlds</h4>
                                 <p>
                                     As an alternative to hosting your
@@ -117,7 +118,8 @@
                                     and your builders.
                                 </p>
                             </div>
-                            <div class="medium-4 cell padded">
+                            <div class="medium-4 cell padded" data-equalizer-watch>
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 98 76"><defs><style>.a{fill:url(#a);}</style><linearGradient id="a" x1="49" y1="75.17" x2="49" y2="0.6" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f15a26"/><stop offset="1" stop-color="#f79420"/></linearGradient></defs><title>palette</title><path class="a" d="M85.76,10.83C70.24.5,52.81-3.06,32.15,2.86,16,7.49,1.23,25.83.09,41.55-1.26,60.12,13.2,76,38.68,76c27.47,0,37.75-13.22,38-17.23S65.94,47.35,73,39.73c8.83-9.54,16.68-1.41,21.44-2.56S101.6,21.37,85.76,10.83ZM53.89,57.41a7.5,7.5,0,1,1,7.52-7.5A7.5,7.5,0,0,1,53.89,57.41Z"/></svg>
                                 <h4>WorldEdit available</h4>
                                 <p>
                                     Players that have been online for a
@@ -126,7 +128,8 @@
                                     WorldEdit.
                                 </p>
                             </div>
-                            <div class="medium-4 cell padded">
+                            <div class="medium-4 cell padded" data-equalizer-watch>
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 92 92"><defs><style>.a{fill:url(#a);}</style><linearGradient id="a" x1="46" y1="92.46" x2="46" y2="-0.37" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f15a26"/><stop offset="1" stop-color="#f79420"/></linearGradient></defs><title>network</title><path class="a" d="M22.37,30.57a9.79,9.79,0,0,1,2.88.43A79.4,79.4,0,0,1,36.66,20.5a10,10,0,0,1-.27-2.27,9.64,9.64,0,0,1,.51-3.1,71.68,71.68,0,0,0-15-8.28A46.14,46.14,0,0,0,8.94,18.76a71.76,71.76,0,0,0,9.19,12.79A9.71,9.71,0,0,1,22.37,30.57Zm-9.79,9.78a9.73,9.73,0,0,1,.8-3.86A78.67,78.67,0,0,1,4.9,25.35,46,46,0,0,0,6.48,69.53a77.76,77.76,0,0,1,8.1-23.27A9.7,9.7,0,0,1,12.58,40.35ZM46.18,8.44a9.72,9.72,0,0,1,6.67,2.65,78.12,78.12,0,0,1,16.08-5A46,46,0,0,0,29.82,2.94,78.65,78.65,0,0,1,41.21,9.81,9.63,9.63,0,0,1,46.18,8.44Zm14.63,46.1a9.86,9.86,0,0,1,2.54-3.28A71.59,71.59,0,0,0,50,27.24a9.8,9.8,0,0,1-9.51-1.06,72.37,72.37,0,0,0-9.82,9,9.65,9.65,0,0,1,1.48,5.15,9.82,9.82,0,0,1-.44,2.94A71.18,71.18,0,0,0,60.81,54.54Zm12.7,13.21c.13,1.85.2,3.72.2,5.61a79.22,79.22,0,0,1-.61,9.8A46,46,0,0,0,89.83,60a78,78,0,0,1-10.9,1.83A9.79,9.79,0,0,1,73.51,67.75Zm-15-6.63A78.1,78.1,0,0,1,27.47,48.69a9.63,9.63,0,0,1-5.1,1.45,10.23,10.23,0,0,1-2-.2,70.94,70.94,0,0,0-8,27.42,46,46,0,0,0,15.72,11A78.22,78.22,0,0,1,58.52,61.12ZM76.88,11.91a71.17,71.17,0,0,0-21,5.34,7.94,7.94,0,0,1,.05,1,9.71,9.71,0,0,1-1,4.3A78.4,78.4,0,0,1,69.8,49a9.78,9.78,0,0,1,8.85,6,71.19,71.19,0,0,0,12.89-2.52A45.9,45.9,0,0,0,76.88,11.91ZM63.44,66.35A71.29,71.29,0,0,0,34.83,90.63,46.18,46.18,0,0,0,46,92a45.66,45.66,0,0,0,19.41-4.3,71.32,71.32,0,0,0,1.45-14.34c0-1.78-.08-3.53-.21-5.28A9.78,9.78,0,0,1,63.44,66.35Z"/></svg>
                                 <h4>Web world maps</h4>
                                 <p>
                                     An online map can be extremely useful
@@ -135,7 +138,8 @@
                                     easy-to-use web map to assist you.
                                 </p>
                             </div>
-                            <div class="medium-4 cell padded">
+                            <div class="medium-4 cell padded" data-equalizer-watch>
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 70 85"><defs><style>.a{fill:url(#a);}</style><linearGradient id="a" x1="35" y1="85" x2="35" y2="-0.56" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f15a26"/><stop offset="1" stop-color="#f79420"/></linearGradient></defs><title>padlock</title><path class="a" d="M64,30H55V23C55,8.51,48.33,0,35,0S15,8.51,15,23v7H5c-2.76,0-5,3.24-5,6V75a7.35,7.35,0,0,0,4.76,6.54l6,1.93A38.43,38.43,0,0,0,20.5,85h29a38,38,0,0,0,9.76-1.54l6-1.93A7.32,7.32,0,0,0,70,75V36C70,33.24,66.76,30,64,30ZM25,21c0-7.23,4-11,10-11s10,3.77,10,11v9H25Z"/></svg>
                                 <h4>Hardened protection</h4>
                                 <p>
                                     To prevent griefing in the public
@@ -144,7 +148,8 @@
                                     and managed WorldGuard.
                                 </p>
                             </div>
-                            <div class="medium-4 cell padded">
+                            <div class="medium-4 cell padded" data-equalizer-watch>
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 65"><defs><style>.a{fill:url(#a);}</style><linearGradient id="a" x1="50" y1="66.31" x2="50" y2="-0.43" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f15a26"/><stop offset="1" stop-color="#f79420"/></linearGradient></defs><title>lightning</title><path class="a" d="M76.06,18.2a24.56,24.56,0,0,0-4,.34A26.53,26.53,0,0,0,46.54,0C31.85,0,20,11.64,20,26a26.28,26.28,0,0,0,.28,3.78,17,17,0,0,0-2.15-.14,17.68,17.68,0,1,0,0,35.36h58C89.29,65,100,54.52,100,41.6S89.29,18.2,76.06,18.2ZM56.86,39.76c-2.48,3.52-13.08,14.44-13.52,14.9-.52.64-2,1.72-3.32.84a2,2,0,0,1-.86-1.78,5.64,5.64,0,0,1,.49-2.06l5.17-11.43c-1-.39-2.64-1.06-3.93-1.62l-.34-.15c-1.31-.56-2.94-1.25-2.94-3a5.62,5.62,0,0,1,1.24-3.05c2.48-3.52,13.08-14.44,13.53-14.9.52-.64,1.95-1.72,3.31-.84a2,2,0,0,1,.86,1.78,5.64,5.64,0,0,1-.49,2.06L50.89,31.9c1,.39,2.64,1.06,3.93,1.62l.35.15c1.3.55,2.93,1.25,2.93,3A5.54,5.54,0,0,1,56.86,39.76Z"/></svg>
                                 <h4>Lightning fast connection</h4>
                                 <p>
                                     We use top of the line cloud services
@@ -153,7 +158,8 @@
                                     responsive.
                                 </p>
                             </div>
-                            <div class="medium-4 cell padded">
+                            <div class="medium-4 cell padded" data-equalizer-watch>
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 92 92"><defs><style>.a{fill:url(#a);}.b{fill:url(#b);}</style><linearGradient id="a" x1="46" y1="92.59" x2="46" y2="-0.79" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f15a26"/><stop offset="1" stop-color="#f79420"/></linearGradient><linearGradient id="b" x1="53.49" y1="65.44" x2="53.49" y2="18.72" xlink:href="#a"/></defs><title>clock</title><path class="a" d="M46,0A46,46,0,1,0,92,46,46,46,0,0,0,46,0Zm0,82A36,36,0,1,1,82,46,36,36,0,0,1,46,82Z"/><polygon class="b" points="49.5 20 42.5 20 42.5 47.45 59.52 64.47 64.47 59.53 49.5 44.55 49.5 20"/></svg>
                                 <h4>Infallible uptime</h4>
                                 <p>
                                     Our continous upgrade system allows
