--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="container">
                         <h2 class="text-center">Exactly what you need from a server</h2>
 
-                        <div class="grid-x grid-margin-x" data-equalizer>
+                        <div class="grid-x grid-margin-x align-center" data-equalizer>
                             <div class="medium-4 cell padded" data-equalizer-watch>
                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 96 96"><defs><style>.a{fill:url(#a);}</style><linearGradient id="a" x1="48" y1="96.74" x2="48" y2="-0.53" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f15a26"/><stop offset="1" stop-color="#f79420"/></linearGradient></defs><title>planet</title><path class="a" d="M48,0A48,48,0,1,0,96,48,48.06,48.06,0,0,0,48,0ZM88.94,48a40.82,40.82,0,0,1-8.48,24.91,6.54,6.54,0,0,1-1.59-7.62c1.51-3.31,1.9-10.94,1.56-13.91s-1.88-10.14-6.07-10.2-7.07-1.45-9.56-6.42c-5.16-10.34,9.7-12.32,4.53-18-1.44-1.61-8.91,6.62-10-4.35-.07-.77.68-1.94,1.68-3.16A41,41,0,0,1,88.94,48ZM42.38,7.47c-1,1.91-3.57,2.68-5.14,4.11-3.42,3.1-4.89,2.67-6.73,5.64s-7.83,7.25-7.83,9.39,3,4.69,4.53,4.19a16.12,16.12,0,0,1,7.83.36c2.35.82,19.57,1.65,14.08,16.22C47.39,52,39.76,51.22,37.73,58.9a60.33,60.33,0,0,0-1.43,7.5C36.17,68.83,38,78,35.67,78S27,69.79,27,68.31s-1.65-6.69-1.65-11.15-7.58-4.39-7.58-10.31c0-5.35,4.11-8,3.19-10.57s-8.14-2.64-11.15-3A41,41,0,0,1,42.38,7.47ZM35.12,86.85c2.46-1.3,2.71-3,4.94-3.07,2.55-.11,4.63-1,7.5-1.62,2.55-.56,7.12-3.15,11.14-3.48,3.38-.28,10.07.18,11.87,3.45a40.78,40.78,0,0,1-35.45,4.72Z"/></svg>
                                 <h4>Custom private worlds</h4>
@@ -156,15 +156,6 @@
                                     with a redundant 40gbps network to
                                     ensure that our servers are fast and
                                     responsive.
-                                </p>
-                            </div>
-                            <div class="medium-4 cell padded" data-equalizer-watch>
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 92 92"><defs><style>.f{fill:url(#f);}.g{fill:url(#g);}</style><linearGradient id="f" x1="46" y1="92.59" x2="46" y2="-0.79" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f15a26"/><stop offset="1" stop-color="#f79420"/></linearGradient><linearGradient id="g" x1="53.49" y1="65.44" x2="53.49" y2="18.72" xlink:href="#a"/></defs><title>clock</title><path class="f" d="M46,0A46,46,0,1,0,92,46,46,46,0,0,0,46,0Zm0,82A36,36,0,1,1,82,46,36,36,0,0,1,46,82Z"/><polygon class="g" points="49.5 20 42.5 20 42.5 47.45 59.52 64.47 64.47 59.53 49.5 44.55 49.5 20"/></svg>
-                                <h4>Infallible uptime</h4>
-                                <p>
-                                    Our continous upgrade system allows
-                                    our servers to always be online and
-                                    available, whenever you want to play.
                                 </p>
                             </div>
                         </div>
