less bad descriptions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-W6G4DT8');</script> -->
 
-        <meta name="description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
+        <meta name="description" content="A creative minecraft server, equipped to handle anything from casual builds to massive projects">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="canonical" href="https://interflare.net/">
         <meta name="referrer" content="no-referrer-when-downgrade">
@@ -25,11 +25,11 @@
         <meta property="og:site_name" content="InterFlare">
         <meta property="og:type" content="website">
         <meta property="og:title" content="InterFlare / Creative Minecraft Server">
-        <meta property="og:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
+        <meta property="og:description" content="A creative minecraft server, equipped to handle anything from casual builds to massive projects">
         <meta property="og:url" content="https://interflare.net/">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="InterFlare / Creative Minecraft Server">
-        <meta name="twitter:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
+        <meta name="twitter:description" content="A creative minecraft server, equipped to handle anything from casual builds to massive projects">
         <meta name="twitter:url" content="https://interflare.net/">
 
         <script src="https://use.typekit.net/qsn5cop.js"></script>
