--- a/map.html
+++ b/map.html
@@ -24,11 +24,11 @@
 
         <meta property="og:site_name" content="InterFlare">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="InterFlare / Creative Minecraft Server">
+        <meta property="og:title" content="Minecraft Live Map / InterFlare">
         <meta property="og:description" content="A creative minecraft server, equipped to handle anything from casual builds to massive projects">
         <meta property="og:url" content="https://interflare.net/map.html">
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:title" content="InterFlare / Creative Minecraft Server">
+        <meta name="twitter:title" content="Minecraft Live Map / InterFlare">
         <meta name="twitter:description" content="A creative minecraft server, equipped to handle anything from casual builds to massive projects">
         <meta name="twitter:url" content="https://interflare.net/map.html">
 
