--- a/join.html
+++ b/join.html
@@ -87,7 +87,7 @@
                 <page>
                     <section id="join" style="padding:15px 0 50px;">
                         <div class="container">
-                            <h2>Join us today</h2>
+                            <h2 class="lesser">Join us today</h2>
                             <div class="input-group">
                                 <span class="input-group-label">MC v1.12.1</span>
                                 <input class="input-group-field" type="text" value="c.interflare.net" onfocus="this.select();">
@@ -112,7 +112,7 @@
                                 strike a balance between the new features from updates, and server stability.
                             </p>
                             <p>
-                                This means that often we will most likely be a version behind the offical
+                                This means that we will most likely be a version behind the offical
                                 releases for anywhere up to a week. If you want to join the server during
                                 this awkward transition period, you will have to set your Minecraft version
                                 in the launcher:
