--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                 <section class="dark" id="join">
                     <div class="container">
-                        <h2>Join us today</h2>
+                        <h2 class="lesser">Join us today</h2>
                         <div class="input-group">
                             <span class="input-group-label">MC v1.12.1</span>
                             <input class="input-group-field" type="text" value="c.interflare.net" onfocus="this.select();">
